@@ -62,7 +62,7 @@ var DEFAULTS = {
   metricsInterval: '30s',
   metricsLimit: 1000,
   sanitizeFieldNames: ['password', 'passwd', 'pwd', 'secret', '*key', '*token*',
-    '*session*', '*credit*', '*card*', 'authorization', 'set-cookie',
+    '*session*', '*credit*', '*card*', '*auth*', 'set-cookie',
     'pw', 'pass', 'connect.sid'
   ],
   serviceNodeName: undefined,
